// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-pagination-item-counts #render should render as expected (1) 1`] = `
<gux-pagination-buttons current-page="0" layout="full" total-pages="0">
  <div class="gux-full gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="First">
          <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="Previous">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
    <div class="gux-pagination-buttons-input-container">
      <div>
        Page
      </div>
      <div class="gux-pagination-buttons-input">
        <gux-input-text-like>
          <!---->
          <div class="gux-input-container">
            <input slot="input" value="0">
          </div>
        </gux-input-text-like>
      </div>
      <div>
        of 0
      </div>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="Next">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="Last">
          <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (2) 1`] = `
<gux-pagination-buttons current-page="1" layout="full" total-pages="10">
  <div class="gux-full gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="First">
          <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="Previous">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
    <div class="gux-pagination-buttons-input-container">
      <div>
        Page
      </div>
      <div class="gux-pagination-buttons-input">
        <gux-input-text-like>
          <!---->
          <div class="gux-input-container">
            <input slot="input" value="1">
          </div>
        </gux-input-text-like>
      </div>
      <div>
        of 10
      </div>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button title="Next">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button title="Last">
          <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (3) 1`] = `
<gux-pagination-buttons current-page="5" layout="full" total-pages="10">
  <div class="gux-full gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button title="First">
          <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button title="Previous">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
    <div class="gux-pagination-buttons-input-container">
      <div>
        Page
      </div>
      <div class="gux-pagination-buttons-input">
        <gux-input-text-like>
          <!---->
          <div class="gux-input-container">
            <input slot="input" value="5">
          </div>
        </gux-input-text-like>
      </div>
      <div>
        of 10
      </div>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button title="Next">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button title="Last">
          <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (4) 1`] = `
<gux-pagination-buttons current-page="0" layout="small" total-pages="0">
  <div class="gux-pagination-buttons-container gux-small">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="First">
          <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="Previous">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
    <div class="gux-pagination-buttons-spacer"></div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="Next">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="Last">
          <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (5) 1`] = `
<gux-pagination-buttons current-page="1" layout="small" total-pages="10">
  <div class="gux-pagination-buttons-container gux-small">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="First">
          <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="Previous">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
    <div class="gux-pagination-buttons-spacer"></div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button title="Next">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button title="Last">
          <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (6) 1`] = `
<gux-pagination-buttons current-page="5" layout="small" total-pages="10">
  <div class="gux-pagination-buttons-container gux-small">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button title="First">
          <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button title="Previous">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
    <div class="gux-pagination-buttons-spacer"></div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button title="Next">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button title="Last">
          <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (7) 1`] = `
<gux-pagination-buttons current-page="0" layout="expanded" total-pages="0">
  <div class="gux-expanded gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="First">
          <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="Previous">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
    <div class="gux-pagination-buttons-list-container"></div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="Next">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="Last">
          <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (8) 1`] = `
<gux-pagination-buttons current-page="1" layout="expanded" total-pages="10">
  <div class="gux-expanded gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="First">
          <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button disabled="" title="Previous">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <button class="gux-pagination-buttons-list-current">
        1
      </button>
      <button class="gux-pagination-buttons-list-target">
        2
      </button>
      <button class="gux-pagination-buttons-list-target">
        3
      </button>
      <button class="gux-pagination-buttons-list-target">
        4
      </button>
      <button class="gux-pagination-buttons-list-target">
        5
      </button>
      <button class="gux-pagination-buttons-list-target">
        6
      </button>
      <button class="gux-pagination-buttons-list-target">
        7
      </button>
      <button class="gux-pagination-buttons-list-target">
        8
      </button>
      <button class="gux-pagination-buttons-list-target">
        9
      </button>
      <button class="gux-pagination-buttons-list-target">
        10
      </button>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button title="Next">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button title="Last">
          <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (9) 1`] = `
<gux-pagination-buttons current-page="5" layout="expanded" total-pages="10">
  <div class="gux-expanded gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button title="First">
          <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button title="Previous">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <button class="gux-pagination-buttons-list-target">
        1
      </button>
      <button class="gux-pagination-buttons-list-target">
        2
      </button>
      <button class="gux-pagination-buttons-list-target">
        3
      </button>
      <button class="gux-pagination-buttons-list-target">
        4
      </button>
      <button class="gux-pagination-buttons-list-current">
        5
      </button>
      <button class="gux-pagination-buttons-list-target">
        6
      </button>
      <button class="gux-pagination-buttons-list-target">
        7
      </button>
      <button class="gux-pagination-buttons-list-target">
        8
      </button>
      <button class="gux-pagination-buttons-list-target">
        9
      </button>
      <button class="gux-pagination-buttons-list-target">
        10
      </button>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot-beta accent="secondary">
        <button title="Next">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
      <gux-button-slot-beta accent="secondary">
        <button title="Last">
          <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
        </button>
      </gux-button-slot-beta>
    </div>
  </div>
</gux-pagination-buttons>
`;
